Fixed visibility of ministries dropdown menu

--- a/src/components/layout/NavBar/NavBar.css
+++ b/src/components/layout/NavBar/NavBar.css
@@ -28,9 +28,9 @@
   pointer-events: none;
 }
 
-.lgm-nav__blur {
+.lgm-nav__blur::before {
   backdrop-filter: blur(6px);
-  -webkit-backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(6px);
   -webkit-mask-image: linear-gradient(
     to bottom, 
     rgba(0,0,0,1) 80%, 
